--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>Discord: <strong>.pokebol</strong></p>
         <p>Email: <strong>soon</strong></p>
     
-        <a href="https://discord.gg/TWÓJ-LINK" target="_blank" class="discord-button">Mój serwer Discord</a>
+        <a href="https://discord.gg/HCwSU33ctC" target="_blank" class="discord-button">Mój serwer Discord</a>
     </section>
 
     <section id="orders" class="section" style="display: none;">
