--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 </header>
 
 <main>
-    <section id="home" class="section">
-        <h2>Witaj drogi użydkowniku!</h2>
-        <p>Specjalizuję się w tworzeniu botów discord oraz skryptów MTA jeżeli chcesz dowiedzieć się więcej wejdź w zakładkę "O mnie"</p>
+    <section id="home" class="section active">
+        <h2>Witaj drogi użytkowniku!</h2>
+        <p>Specjalizuję się w tworzeniu botów Discord oraz skryptów MTA. Wejdź w zakładkę "O mnie", aby dowiedzieć się więcej.</p>
     </section>
 
     <section id="about" class="section">
         <h2>O mnie</h2>
-        <p>Cześć! Nazywam się Marcel, ale w sieci jestem znany jako Pokebol.</p>
+        <p>Cześć! Nazywam się Marcel, w sieci znany jako Pokebol.</p>
         <h2>Boty discord</h2>
         <p>Od kilkunastu miesięcy specjalizuję się w tworzeniu botów Discord, zarówno dla siebie, jak i na zamówienie. Tworzyłem boty z wieloma funkcjami, od ułatwienia moderacji serwera po integrację z popularnymi serwerami, takimi jak MTA czy FiveM. Stworzę dla Ciebie bota, który pomoże w moderacji serwera lub zintegruję Twój serwer Discord z odpowiednimi systemami, abyś mógł np. szybko resetować hasła. Potrafię stworzyć bota dostosowanego do Twoich indywidualnych potrzeb – wystarczy, że napiszesz, jakie funkcje chciałbyś mieć! Jeśli szukasz niezawodnego bota, który pomoże w moderacji Twojego serwera lub zintegruje go z MTA czy FiveM, z chęcią Ci pomogę!</p>
         <h2>Skrypty MTA</h2>
@@ -38,12 +38,11 @@
     <section id="contact" class="section">
         <h2>Kontakt</h2>
         <p>Discord: <strong>.pokebol</strong></p>
-        <p>Email: <strong>soon</strong></p>
-    
+        <p>Email: <strong>devpokebol1@gmail.com</strong></p>
         <a href="https://discord.gg/HCwSU33ctC" target="_blank" class="discord-button">Mój serwer Discord</a>
     </section>
 
-    <section id="orders" class="section" style="display: none;">
+    <section id="orders" class="section">
         <h2>Zamówienia</h2>
         <form action="https://formspree.io/f/xdkgklar" method="POST" class="order-form">
             <label for="message">Opisz swoje zamówienie:</label><br>
@@ -55,7 +54,7 @@
 </main>
 
 <footer>
-    <p>© 2025 Pokebol bots & script MTA | Wszystkie prawa zastrzeżone</p>
+    <p>Ostatnia modyfikacja 28.04.2025</p>
 </footer>
 
 <script src="script.js"></script>
