--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#" onclick="showSection('about')">O mnie</a></li>
             <li><a href="#" onclick="showSection('contact')">Kontakt</a></li>
             <li><a href="#" onclick="showSection('orders')">Zamówienia</a></li>
+            <li><a href="#" onclick="showSection('gallery')">Galeria</a></li>
         </ul>
     </nav>
 </header>
@@ -32,14 +33,14 @@
         <h2>Boty discord</h2>
         <p>Od kilkunastu miesięcy specjalizuję się w tworzeniu botów Discord, zarówno dla siebie, jak i na zamówienie. Tworzyłem boty z wieloma funkcjami, od ułatwienia moderacji serwera po integrację z popularnymi serwerami, takimi jak MTA czy FiveM. Stworzę dla Ciebie bota, który pomoże w moderacji serwera lub zintegruję Twój serwer Discord z odpowiednimi systemami, abyś mógł np. szybko resetować hasła. Potrafię stworzyć bota dostosowanego do Twoich indywidualnych potrzeb – wystarczy, że napiszesz, jakie funkcje chciałbyś mieć! Jeśli szukasz niezawodnego bota, który pomoże w moderacji Twojego serwera lub zintegruje go z MTA czy FiveM, z chęcią Ci pomogę!</p>
         <h2>Skrypty MTA</h2>
-        <p>Od kilku miesięcy zajmuję się programowaniem w MTA Lua, tworząc skrypty, które poprawiają jakość rozgrywki oraz zarządzania serwerami. Moje projekty obejmują różnorodne funkcje, od administracyjnych narzędzi, po unikalne mechaniki, które wzbogacają doświadczenia graczy. Jeśli potrzebujesz skryptu MTA Lua, który idealnie dopasuje się do Twoich wymagań – jestem w stanie stworzyć coś, co odpowiada Twojej wizji. Niezależnie od tego, czy chodzi o integrację z innymi systemami, nowe komendy, czy unikalne elementy rozgrywki – wszystko zależy od tego, czego szukasz. Jeśli chcesz dodać coś wyjątkowego na swoim serwerze lub potrzebujesz pomocy w rozwoju swojego projektu, chętnie Ci pomogę i zaplanuję rozwiązanie, które sprawi, że Twój serwer stanie się jeszcze lepszy</p>
+        <p>Od kilku miesięcy zajmuję się programowaniem w MTA Lua, tworząc skrypty, które poprawiają jakość rozgrywki oraz zarządzania serwerami. Moje projekty obejmują różnorodne funkcje, od administracyjnych narzędzi, po unikalne mechaniki, które wzbogacają doświadczenia graczy. Jeśli potrzebujesz skryptu MTA Lua, który idealnie dopasuje się do Twoich wymagań – jestem w stanie stworzyć coś, co odpowiada Twojej wizji. Niezależnie od tego, czy chodzi o integrację z innymi systemami, nowe komendy, czy unikalne elementy rozgrywki – wszystko zależy od tego, czego szukasz. Jeśli chcesz dodać coś wyjątkowego na swoim serwerze lub potrzebujesz pomocy w rozwoju swojego projektu, chętnie Ci pomogę i zaplanuję rozwiązanie, które sprawi, że Twój serwer stanie się jeszcze lepszy. Aktualny Współwłaściciel VisionRPG </p>
     </section>
 
     <section id="contact" class="section">
         <h2>Kontakt</h2>
         <p>Discord: <strong>.pokebol</strong></p>
         <p>Email: <strong>devpokebol1@gmail.com</strong></p>
-        <a href="https://discord.gg/HCwSU33ctC" target="_blank" class="discord-button">Mój serwer Discord</a>
+        <a href="https://discord.gg/TjyQ3vCCzH" target="_blank" class="discord-button">VisionRPG</a>
     </section>
 
     <section id="orders" class="section">
@@ -51,10 +52,21 @@
             <p>UWAGA: podaj swój AKTUALNY email abyśmy mogli się z tobą skontaktować</p>
         </form>
     </section>
+
+    <section id="gallery" class="section">
+        <h2>Galeria</h2>
+        <p>Rzucam tutaj fotki botów i skryptów, które robiłem.</p>
+        <div class="gallery-container">
+            <img src="assets/bot.png" alt="Bot 1">
+            <img src="assets/tak o.png" alt="Bot 2">
+            <img src="assets/MTA.png" alt="Bot 3">
+        </div>
+    </section>
+
 </main>
 
 <footer>
-    <p>Ostatnia modyfikacja 28.04.2025</p>
+    <p>Ostatnia modyfikacja 02.06.2025</p>
 </footer>
 
 <script src="script.js"></script>
