--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <h2>Galeria</h2>
         <p>Rzucam tutaj fotki botów i skryptów, które robiłem.</p>
         <div class="gallery-container">
-            <img src="assets/bot.png" alt="Bot 1">
+            <img src="assets/Bot.png" alt="Bot 1">
             <img src="assets/tak o.png" alt="Bot 2">
             <img src="assets/MTA.png" alt="Bot 3">
         </div>
